# MultiObjective-Tour-Planning

./: .gitignore  CMakeLists.txt  README.md  check.py  debug.sh  error.txt  log.txt  results.txt  run-movns.sh  run.sh  view.sh
OSRM/: get-routes.py  matriz_distancias_carro_metros_2025-02-25_11-55-15.csv  matriz_distancias_carro_metros_2025-03-07_17-03-54.csv  matriz_distancias_carro_metros_2025-03-12_21-19-39.csv  matriz_distancias_km_2025-02-24_19-05-16.csv  matriz_distancias_pe_metros.csv  matriz_distancias_pe_metros_2025-02-25_11-55-15.csv  matriz_distancias_pe_metros_2025-03-07_17-03-54.csv  matriz_distancias_pe_metros_2025-03-11_11-47-53.csv  matriz_tempos_carro_min_2025-02-24_19-05-16.csv  matriz_tempos_carro_min_2025-02-25_11-55-15.csv  matriz_tempos_carro_min_2025-03-07_17-03-54.csv  matriz_tempos_carro_min_2025-03-12_21-19-39.csv  matriz_tempos_pe_min_2025-02-24_19-05-16.csv  matriz_tempos_pe_min_2025-02-25_11-55-15.csv  matriz_tempos_pe_min_2025-03-07_17-03-54.csv  matriz_tempos_pe_min_2025-03-11_11-47-53.csv  matriz_tempos_pe_min_2025-03-12_21-19-39.csv  osrm_requisicoes_log_2025-02-24_18-45-54.txt  osrm_requisicoes_log_2025-02-24_19-05-16.txt  rotas_turisticas_log_2025-02-25_11-55-15.txt  rotas_turisticas_log_2025-03-07_17-03-54.txt  rotas_turisticas_log_2025-03-12_21-19-39.txt
app/: CORRECOES_IMPLEMENTADAS.md  README.md  SOLUCOES_FINAIS.md  app.py  requirements.txt
app/static/css/: custom.css  mobile.css
app/static/js/: harmony.js  objectives.js  solution_dial.js
data/: attractions.txt
include/: base.hpp  hypervolume.hpp  models.hpp  moead.hpp  movns-algorithm.hpp  movns-metrics.hpp  movns-neighborhood.hpp  movns-solution.hpp  movns-utils.hpp  nsga2-base.hpp  nsga2.hpp  route_visualizer.hpp  utils.hpp
metrics/: calculate_binary_coverage.py  calculate_hypervolume.py
results/: binary-coverage-metrics.csv  binary_coverage_report.txt  hypervolume_report.txt  metrics.csv  movns-geracoes.csv  movns-resultados.csv  movns_hypervolume_input.csv  nsga-ii_hypervolume_input.csv  nsga2-geracoes.csv  nsga2-resultados.csv
src/: hypervolume.cpp  main.cpp  metrics.cpp  models.cpp  movns-algorithm.cpp  movns-algorithm.hpp  movns-main.cpp  movns-metrics.cpp  movns-metrics.hpp  movns-neighborhood.cpp  movns-solution.cpp  movns-utils.cpp  nsga2-base.cpp  nsga2.cpp  utils.cpp
visualization/: README.me  app.py  readme.html  requirements.txt  results_visualizer.py
visualization/assects/js/: solution_dial.js
visualization/assets/js/: solution_dial.js
visualization/static/js/: linkedArc.js
visualization/templates/: linked_arcs.html
